force-app/main/default/objects/Knowledge__kav/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>e.g. information about add-ons/any system requirements/other software the upgrade might affect etc (could also link off to other articles if needed)</description>
    <inlineHelpText>e.g. information about add-ons/any system requirements/other software the upgrade might affect etc (could also link off to other articles if needed)</inlineHelpText>
    <label>Additional information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>