force-app/main/default/objects/Knowledge__kav/fields/Additional_Information_Internal__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Internal__c</fullName>
    <label>Additional Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>