force-app/main/default/objects/Knowledge__kav/fields/Admin_Edit_Only__c.field-meta.xml
<CustomField>
    <fullName>Admin_Edit_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by KCS Master, Knowledge Specialist or Knowledge Manager. along with a validation rule</description>
    <label>Admin Edit Only</label>
    <type>Checkbox</type>
</CustomField>