force-app/main/default/objects/Knowledge__kav/fields/Article_Header_Image__c.field-meta.xml
<CustomField>
    <fullName>Article_Header_Image__c</fullName>
    <description>URL to an image that is displayed at the top of the article</description>
    <label>Article Header Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>