force-app/main/default/objects/Knowledge__kav/fields/Article_Header_Image_Formula__c.field-meta.xml
<CustomField>
    <fullName>Article_Header_Image_Formula__c</fullName>
    <description>Formula to set the URL on an article header</description>
    <formula>Knowledge_Edition_Image__r.Image_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Header Image Formula</label>
    <type>Text</type>
</CustomField>