force-app/main/default/objects/Knowledge__kav/fields/Created_By_Division__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Division__c</fullName>
    <formula>CreatedBy.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Division</label>
    <type>Text</type>
</CustomField>