force-app/main/default/objects/Knowledge__kav/fields/EA_Related_Product_Range__c.field-meta.xml
<CustomField>
    <fullName>EA_Related_Product_Range__c</fullName>
    <description>Related product range</description>
    <label>EA Related Product Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>