force-app/main/default/objects/Knowledge__kav/fields/Enviroment__c.field-meta.xml
<CustomField>
    <fullName>Enviroment__c</fullName>
    <label>Environment</label>
    <type>TextArea</type>
</CustomField>