force-app/main/default/objects/Knowledge__kav/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine whether a knowledge article should be displayed in the featured articles block in the support community</description>
    <inlineHelpText>Select this checkbox to mark the article as featured</inlineHelpText>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>