force-app/main/default/objects/Knowledge__kav/fields/Flag_For_Review__c.field-meta.xml
<CustomField>
    <fullName>Flag_For_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag For Review</label>
    <type>Checkbox</type>
</CustomField>