force-app/main/default/objects/Knowledge__kav/fields/How_this_version_will_be_made_available__c.field-meta.xml
<CustomField>
    <fullName>How_this_version_will_be_made_available__c</fullName>
    <label>How this version will be made available</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>