force-app/main/default/objects/Knowledge__kav/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>The image to be displayed in article cards on the portal</description>
    <inlineHelpText>Upload a single image into this rich text field to have it displayed in the community portal</inlineHelpText>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>