force-app/main/default/objects/Knowledge__kav/fields/Information_Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Information_Article_Body__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>