force-app/main/default/objects/Knowledge__kav/fields/Information_Classification__c.field-meta.xml
<CustomField>
    <fullName>Information_Classification__c</fullName>
    <inlineHelpText>Internal Only is for Access internal articles. Restricted is for articles which customers must log in to see. Public is for all other articles.</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Internal Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>