force-app/main/default/objects/Knowledge__kav/fields/Internal_Solution__c.field-meta.xml
<CustomField>
    <fullName>Internal_Solution__c</fullName>
    <label>Internal Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>