force-app/main/default/objects/Knowledge__kav/fields/Join_the_converstaion__c.field-meta.xml
<CustomField>
    <fullName>Join_the_converstaion__c</fullName>
    <description>generic footer to post any questions, feedback, etc in a new community post we’ll create for the release</description>
    <inlineHelpText>generic footer to post any questions, feedback, etc in a new community post we’ll create for the release</inlineHelpText>
    <label>Join the conversation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>