force-app/main/default/objects/Knowledge__kav/fields/Knowledge_Edition_Image__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Edition_Image__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Knowledge Edition Object</description>
    <label>Knowledge Edition Image</label>
    <referenceTo>Knowledge_Edition_Image__c</referenceTo>
    <relationshipLabel>Knowledge</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>