force-app/main/default/objects/Knowledge__kav/fields/Power_Of_One__c.field-meta.xml
<CustomField>
    <fullName>Power_Of_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power Of One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>