force-app/main/default/objects/Knowledge__kav/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ProductRange</valueSetName>
    </valueSet>
</CustomField>