force-app/main/default/objects/Knowledge__kav/fields/Product_Routing__c.field-meta.xml
<CustomField>
    <fullName>Product_Routing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Routing</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProductRouting__c.Division__c</field>
            <operation>equals</operation>
            <valueField>$Source.Division__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProductRouting__c</referenceTo>
    <relationshipLabel>Knowledge</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>