force-app/main/default/objects/Knowledge__kav/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region(s) that the article is available in</description>
    <inlineHelpText>Region(s) that the article is available in. No value means the article is available in all regions</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Community_Region</valueSetName>
    </valueSet>
</CustomField>