force-app/main/default/objects/Knowledge__kav/fields/Release_note_image__c.field-meta.xml
<CustomField>
    <fullName>Release_note_image__c</fullName>
    <description>A product-specific image used to distinguish between sets of release notes.</description>
    <label>Release note image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>