force-app/main/default/objects/Knowledge__kav/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue/Problem</fullName>
            </value>
            <value>
                <fullName>How To</fullName>
            </value>
            <value>
                <fullName>Internal Only</fullName>
            </value>
            <value>
                <fullName>Product Documentation</fullName>
            </value>
            <value>
                <fullName>Evolve Loop</fullName>
            </value>
            <value>
                <fullName>Customer Bespoke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>