force-app/main/default/objects/Knowledge__kav/fields/Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Review_Reason__c</fullName>
    <label>Review Reason</label>
    <type>TextArea</type>
</CustomField>