force-app/main/default/objects/Knowledge__kav/fields/Technical_Information__c.field-meta.xml
<CustomField>
    <fullName>Technical_Information__c</fullName>
    <label>Technical Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>