force-app/main/default/objects/Knowledge__kav/fields/What_s_New__c.field-meta.xml
<CustomField>
    <fullName>What_s_New__c</fullName>
    <description>summary of each feature with a link to an article if a more detailed one is required</description>
    <inlineHelpText>summary of each feature with a link to an article if a more detailed one is required</inlineHelpText>
    <label>What&apos;s new</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>