force-app/main/default/objects/Knowledge__kav/fields/Whats_been_fixed__c.field-meta.xml
<CustomField>
    <fullName>Whats_been_fixed__c</fullName>
    <label>What&apos;s been fixed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>