force-app/main/default/objects/Knowledge__kav/recordTypes/GDPR.recordType-meta.xml
<RecordType>
    <fullName>GDPR</fullName>
    <active>true</active>
    <label>GDPR</label>
</RecordType>