force-app/main/default/objects/Knowledge__kav/recordTypes/KCS.recordType-meta.xml
<RecordType>
    <fullName>KCS</fullName>
    <active>true</active>
    <description>KCS Record Type</description>
    <label>KCS</label>
</RecordType>