force-app/main/default/objects/Knowledge__kav/recordTypes/KCS_Customer_Bespoke.recordType-meta.xml
<RecordType>
    <fullName>KCS_Customer_Bespoke</fullName>
    <active>true</active>
    <label>KCS - Customer Bespoke</label>
</RecordType>