force-app/main/default/objects/Knowledge__kav/recordTypes/KCS_Internal_Only.recordType-meta.xml
<RecordType>
    <fullName>KCS_Internal_Only</fullName>
    <active>true</active>
    <label>KCS - Internal Only</label>
</RecordType>