force-app/main/default/objects/Knowledge__kav/recordTypes/Legacy.recordType-meta.xml
<RecordType>
    <fullName>Legacy</fullName>
    <active>true</active>
    <description>Pre KCS Article Type</description>
    <label>Legacy</label>
</RecordType>