force-app/main/default/objects/Knowledge__kav/recordTypes/Release_Notes.recordType-meta.xml
<RecordType>
    <fullName>Release_Notes</fullName>
    <active>true</active>
    <label>Release Notes</label>
</RecordType>