force-app/main/default/objects/Knowledge__kav/validationRules/Can_not_publish_external_articles_NEW.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_publish_external_articles_NEW</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    IsVisibleInPkb = TRUE,
    IsVisibleInCsp = TRUE
  ),
  NOT($Permission.KCS_Certified),
  OR(
  ISCHANGED(IsVisibleInPkb),
  ISCHANGED(IsVisibleInCsp)
    )
)</errorConditionFormula>
    <errorMessage>You do not have permission to publish articles to customers or in the public knowledge base, please tick Visible in Internal App only.</errorMessage>
</ValidationRule>