force-app/main/default/objects/Knowledge__kav/validationRules/Cannot_Create_Validated_Articles.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_Validated_Articles</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISNEW(),  ISPICKVAL(ValidationStatus  , &apos;Validated&apos;), $Permission.Can_t_create_validated_Articles),   
AND(OR(ISPICKVAL( PRIORVALUE(ValidationStatus  ) , &apos;Work In Progress&apos;),ISPICKVAL( PRIORVALUE(ValidationStatus  ) , &apos;Not Validated&apos;)),ISPICKVAL(ValidationStatus  , &apos;Validated&apos;),$Permission.Can_t_create_validated_Articles) )</errorConditionFormula>
    <errorMessage>You cannot create validated articles, please change the validation status</errorMessage>
</ValidationRule>