force-app/main/default/objects/Knowledge__kav/validationRules/KCS_Internal_Only_can_not_be_public.validationRule-meta.xml
<ValidationRule>
    <fullName>KCS_Internal_Only_can_not_be_public</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Request_Type__c , &quot;Internal Only&quot; )
&amp;&amp;
(IsVisibleInCsp = TRUE
|| 
IsVisibleInPkb  = TRUE )</errorConditionFormula>
    <errorMessage>Cannot make visible to public or customers, as request type has been set to &quot;Internal Only</errorMessage>
</ValidationRule>