force-app/main/default/objects/Knowledge__kav/validationRules/KCS_Validation_Status_Must_Validated.validationRule-meta.xml
<ValidationRule>
    <fullName>KCS_Validation_Status_Must_Validated</fullName>
    <active>true</active>
    <errorConditionFormula>And (Not(ISPICKVAL( ValidationStatus , &quot;Validated&quot; )),
RecordType.Name = &quot;KCS&quot;,
OR((IsVisibleInCsp = TRUE),(IsVisibleInPkb = TRUE )))</errorConditionFormula>
    <errorMessage>Cannot make visible to public or customers, as validation status has not been set to &quot;Validated&quot;</errorMessage>
</ValidationRule>