force-app/main/default/objects/Knowledge__kav/validationRules/Must_Give_Flag_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Give_Flag_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Flag_For_Review__c == true,  ISBLANK(Review_Reason__c))</errorConditionFormula>
    <errorMessage>Please Give Review Reason</errorMessage>
</ValidationRule>