force-app/main/default/objects/Knowledge__kav/listViews/Access_NFP_Ad_Grants_Articles.listView-meta.xml
<ListView>
    <fullName>Access_NFP_Ad_Grants_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>Division__c</columns>
    <columns>Product__c</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Access NFP Ad Grants</value>
    </filters>
    <filters>
        <field>TITLE</field>
        <operation>contains</operation>
        <value>Website Suite</value>
    </filters>
    <label>Access NFP Ad Grants Articles</label>
</ListView>