force-app/main/default/objects/Knowledge__kav/listViews/Access_Workspace_Articles.listView-meta.xml
<ListView>
    <fullName>Access_Workspace_Articles</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>ARTICLE_CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product__c</columns>
    <columns>TITLE</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Access Workspace</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.KCS</value>
    </filters>
    <label>Access Workspace Articles</label>
</ListView>