force-app/main/default/objects/Knowledge__kav/listViews/Acteol_Articles.listView-meta.xml
<ListView>
    <fullName>Acteol_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Access Financials</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Legacy</value>
    </filters>
    <filters>
        <field>TITLE</field>
        <operation>contains</operation>
        <value>release</value>
    </filters>
    <label>Acteol Articles</label>
</ListView>