force-app/main/default/objects/Knowledge__kav/listViews/Affinity_Works_Articles.listView-meta.xml
<ListView>
    <fullName>Affinity_Works_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>Division__c</columns>
    <columns>Product__c</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>Affinity Works</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.KCS</value>
    </filters>
    <label>Affinity Works Articles</label>
</ListView>