force-app/main/default/objects/Knowledge__kav/listViews/All_DPS_Articles.listView-meta.xml
<ListView>
    <fullName>All_DPS_Articles</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>ARTICLE_CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Product__c</columns>
    <columns>Product_Features__c</columns>
    <columns>TITLE</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>DPS Hosting/Hardware,DPS Legal Accounts,DPS One Office,DPS Spitfire</value>
    </filters>
    <label>DPS Articles (All)</label>
</ListView>