force-app/main/default/objects/Knowledge__kav/listViews/All_Published_Articles.listView-meta.xml
<ListView>
    <fullName>All_Published_Articles</fullName>
    <columns>Division__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ARTICLE_CREATED_DATE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>ARTICLE_CASE_ATTACH_COUNT</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>Access HandiSoft</value>
    </filters>
    <label>All Published Articles</label>
</ListView>